# python-web-server

./: .gitignore  list.txt  pyproject.toml
src/python_web_server/: database.py  lists.txt  main.py
src/python_web_server/templates/: index.html
templates/: index.html  list.html  upload.html
